--- a/src/App.css
+++ b/src/App.css
@@ -11,3 +11,90 @@ html {
   scroll-behavior: smooth;
   height: 100%;
 }
+
+main {
+  box-shadow: 0 -10px 15px rgba(0,0,0,.2);
+}
+
+.content {
+  max-width: 1080px;
+  padding: 80px 30px 70px;
+  margin: 0 auto;
+}
+
+.section-title {
+  font-size: 44px;
+  font-family: "Montserrat", "Lato", sans-serif;
+  font-weight: 800;
+  color: #333;
+  text-align: center;
+}
+
+.section-title::after {
+  content: '';
+  display: block;
+  width: 80px;
+  padding: 5px;
+  margin: 0 auto;
+  border-bottom: 5px solid var(--alt-color-1);
+}
+
+.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
+  font-family: "Lato", sans-serif;
+  font-weight: 500;
+  line-height: 1.2;
+}
+
+.h1, h1 {
+  font-size: 2.5rem;
+}
+
+.h2, h2 {
+  font-size: 2rem;
+}
+
+.h3, h3 {
+  font-size: 1.75rem;
+}
+
+.h4, h4 {
+  font-size: 1.5rem;
+}
+
+.h5, h5 {
+  font-size: 1.25rem;
+}
+
+.h6, h6 {
+  font-size: 1rem;
+}
+
+body, 
+p {
+  font-family: "Lato", sans-serif;
+  font-size: 16px;
+}
+
+.display-1 {
+  font-size: 6rem;
+  font-weight: 300;
+  line-height: 1.2;
+} 
+
+.display-2 {
+  font-size: 5.5rem;
+  font-weight: 300;
+  line-height: 1.2;
+}
+
+.display-3 {
+  font-size: 4.5rem;
+  font-weight: 300;
+  line-height: 1.2;
+}
+
+.display-4 {
+  font-size: 3.5rem;
+  font-weight: 300;
+  line-height: 1.2;
+}
