--- a/src/components/Menu/menu.css
+++ b/src/components/Menu/menu.css
@@ -52,3 +52,18 @@ header #login {
   top: 0!important;
   z-index: 3;
 }
+
+header.dashboard {
+  height: 60px;
+  padding: 0 30px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: #232323;
+  z-index: 999;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  z-index: 999;
+  box-shadow: 0 2px 4px -1px rgba(0,0,0,.2), 0 4px 5px 0 rgba(0,0,0,.14), 0 1px 10px 0 rgba(0,0,0,.12);
+}
