--- a/src/pages/Dashboard/Statistic/statistic.css
+++ b/src/pages/Dashboard/Statistic/statistic.css
@@ -1,3 +1,12 @@
+main {
+  padding: 50px 30px;
+  height: calc(100vh - 60px - 38px);
+  margin-left: 250px;
+  margin-top: 60px;
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+
 #status .container {
 display: flex;
 flex-wrap: wrap;
