--- a/src/components/Menu/menu.css
+++ b/src/components/Menu/menu.css
@@ -67,3 +67,11 @@ header.dashboard {
   z-index: 999;
   box-shadow: 0 2px 4px -1px rgba(0,0,0,.2), 0 4px 5px 0 rgba(0,0,0,.14), 0 1px 10px 0 rgba(0,0,0,.12);
 }
+
+header a {
+  color: #fff;
+  text-decoration: none;
+  padding: 5px 20px;
+  display: flex;
+  align-items: center;
+}
